fixed alignments 2

--- a/src/footer/Footer.css
+++ b/src/footer/Footer.css
@@ -29,16 +29,16 @@
 }
 .footerImg {
   padding: 5px;
-  border-radius: 50%;
-  width: 90% !important;
-  max-width: 95% !important;
-  background-color: #ffffff;
-  width: 30px;
-  height: 30px;
+  /* border-radius: 50%; */
+  /* width: 90% !important; */
+  /* max-width: 95% !important; */
+  /* background-color: #ffffff; */
+  /* width: 30px; */
+  /* height: 30px; */
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 20px;
+  /* margin-left: 20px; */
   cursor: pointer;
 }
 
